test/good/generics/func11.px

func f<T>(x: T): T->T def
    return x+_
    return _+x

print f(5)(6)
print f("abc")('d')
