test/bad/generics/call04.px

func f<T>(g: T->T): Void def
    return

f(min)
